@@ -1,3 +1,7 @@
+2011-11-02  Andrea Scarpino  <andrea@archlinux.org>
+
+	* Sign package
+
 2011-04-05  Stéphane Gaudreault  <stephane@archlinux.org>
 
     * Rebuild of old package
